codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_write_stdin_review_status.snap
---
source: tui/src/chatwidget/tests/guardian.rs
assertion_line: 113
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 80))"
---
• Reviewing approval request (0s • esc to interrupt)
  └ send input to terminal 42: "confirm\n"

▌
▌ Ask Codex to do anything
▌
  GPT-5.6-Sol default · /tmp/project
