codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__image_preparation_restored_input.snap
---
source: tui/src/chatwidget/tests/composer_submission.rs
assertion_line: 2594
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 80))"
---
▌
▌ [Image #1]
▌
▌ [Image #2] describe $file
▌
  GPT-5.6-Sol default · /tmp/project
